Updated closeTableButton to a circle (no longer an x). Also made the legend's dropdown menu arrow smaller on mobile

--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -667,19 +667,19 @@ input[type="search"]::-webkit-search-cancel-button {
 #closeTableButton {
     position: absolute;
     display: none;
-    font-size: x-large;
-    font-weight: normal;
-    font-family: 'Verdana';
-    color: whitesmoke;
     top: 20dvh;
     left: 4.5dvw;
-    padding-left: 0.5rem;
     z-index: 10;
+    height: 10px;
+    width: 10px;
+    margin: 6px;
+    background-color: #ff1100;
+    border-radius: 50%;
     transition: all 0.5s ease;
 }
 
 #closeTableButton:hover {
-    color: red;
+    background-color: #ff1100c7;
 }
 
 #mapContainer {
@@ -828,6 +828,10 @@ input[type="search"]::-webkit-search-cancel-button {
         margin-top: 0.5dvh;
     }
 
+    .arrow {
+        padding: 3px;
+    }
+
     #loadingSpinner {
         left: 40%;
         top: 45dvh;
@@ -847,11 +851,10 @@ input[type="search"]::-webkit-search-cancel-button {
     }
 
     #closeTableButton {
-        font-size: small;
-        color: red;
         top: 21dvh;
         left: 12dvw;
-        padding-left: 0.25rem;
+        height: 8px;
+        width: 8px;
     }
 
 }
